force-app/main/default/objects/Installation__c/fields/Certified_Opthalmic_Technician__c.field-meta.xml
<CustomField>
    <fullName>Certified_Opthalmic_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certified Opthalmic Technician</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Installations2</relationshipName>
    <type>Lookup</type>
</CustomField>