force-app/main/default/objects/Installation__c/fields/Cloned_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Cloned_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to filter cloned opportunities on reports.</description>
    <inlineHelpText>Checkbox for Cloned Opportunity on Installations.</inlineHelpText>
    <label>Cloned Opportunity</label>
    <type>Checkbox</type>
</CustomField>