force-app/main/default/objects/Installation__c/fields/Contract_Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Execution_Date__c</fullName>
    <label>Contract Execution Date</label>
    <type>Date</type>
</CustomField>