force-app/main/default/objects/Installation__c/fields/Contract_Negotiation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Negotiation_Start_Date__c</fullName>
    <label>Contract Negotiation Start Date</label>
    <type>Date</type>
</CustomField>