force-app/main/default/objects/Installation__c/fields/Contract_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Sent_Date__c</fullName>
    <description>Date that the PSA or SOA is sent to the Legal Contact.</description>
    <inlineHelpText>Date that the PSA or SOA is sent to the Legal Contact.</inlineHelpText>
    <label>Contract Sent Date</label>
    <type>Date</type>
</CustomField>