force-app/main/default/objects/Installation__c/fields/Credentialing_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Credentialing_Completion_Date__c</fullName>
    <label>Credentialing Completion Date:</label>
    <type>Date</type>
</CustomField>