force-app/main/default/objects/Installation__c/fields/Credentialing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Credentialing_Start_Date__c</fullName>
    <label>Credentialing Start Date:</label>
    <type>Date</type>
</CustomField>