force-app/main/default/objects/Installation__c/fields/Days_in_Stage__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Stage__c</fullName>
    <description>Number of days in the current stage</description>
    <formula>IF(
ISBLANK(Last_Status_Change_Date__c),
TODAY() - DATEVALUE(CreatedDate),
TODAY() -  Last_Status_Change_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days in the current stage</inlineHelpText>
    <label>Days in Stage (in days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>