force-app/main/default/objects/Installation__c/fields/Days_to_Execution__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Execution__c</fullName>
    <formula>Contract_Execution_Date__c -  Contract_Sent_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Execution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>