force-app/main/default/objects/Installation__c/fields/Deal_Size__c.field-meta.xml
<CustomField>
    <fullName>Deal_Size__c</fullName>
    <description>size of the Opportunity Amount linked to the Installation.</description>
    <formula>Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>