force-app/main/default/objects/Installation__c/fields/Device_Only_Install__c.field-meta.xml
<CustomField>
    <fullName>Device_Only_Install__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Device Only Install</label>
    <type>Checkbox</type>
</CustomField>