force-app/main/default/objects/Installation__c/fields/Distributor_PO__c.field-meta.xml
<CustomField>
    <fullName>Distributor_PO__c</fullName>
    <description>Distributor PO#</description>
    <label>Distributor PO#</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>