force-app/main/default/objects/Installation__c/fields/EMR_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>EMR_Completion_Date__c</fullName>
    <label>EMR Completion Date:</label>
    <type>Date</type>
</CustomField>