force-app/main/default/objects/Installation__c/fields/EMR_Software__c.field-meta.xml
<CustomField>
    <fullName>EMR_Software__c</fullName>
    <label>EMR Software</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allscripts</fullName>
            </value>
            <value>
                <fullName>Athena</fullName>
            </value>
            <value>
                <fullName>Cerner</fullName>
            </value>
            <value>
                <fullName>eCW</fullName>
            </value>
            <value>
                <fullName>Epic</fullName>
            </value>
            <value>
                <fullName>Medent</fullName>
            </value>
            <value>
                <fullName>NextGen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>