force-app/main/default/objects/Installation__c/fields/EMR_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>EMR_Start_Date__c</fullName>
    <label>EMR Start Date:</label>
    <type>Date</type>
</CustomField>