force-app/main/default/objects/Installation__c/fields/Expected_Training_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Training_Date__c</fullName>
    <description>If training date isn&apos;t set, use formula. otherwise, use training date.</description>
    <formula>IF(NOT(ISBLANK(Training_Date__c)),Training_Date__c,
CASE(TEXT(Status__c),
&quot;Contract Initiation&quot;, DATEVALUE(CreatedDate) + 63,
&quot;Contract Negotiation&quot;, DATEVALUE(CreatedDate) + 58,
&quot;Account Setup&quot;, DATEVALUE(CreatedDate) + 27,
&quot;Installation pending&quot;, DATEVALUE(CreatedDate) + 18,
&quot;Installation scheduled&quot;, DATEVALUE(CreatedDate) + 15,
Training_Date__c )
)</formula>
    <label>Expected Training Date</label>
    <type>Date</type>
</CustomField>