force-app/main/default/objects/Installation__c/fields/Follow_Up_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Completion_Date__c</fullName>
    <description>Date Follow up was completed. Installation can be removed from all &apos;active and pending installations&apos; reporting.</description>
    <label>Follow Up Completion Date</label>
    <type>Date</type>
</CustomField>