force-app/main/default/objects/Installation__c/fields/Installation_Contact__c.field-meta.xml
<CustomField>
    <fullName>Installation_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary customer contact for the installation</description>
    <inlineHelpText>Primary customer contact for the installation</inlineHelpText>
    <label>Installation Contact</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Installations</relationshipLabel>
    <relationshipName>Installation_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>