force-app/main/default/objects/Installation__c/fields/Installation_Pending_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Pending_Start_Date__c</fullName>
    <label>Installation Pending Start Date</label>
    <type>Date</type>
</CustomField>