force-app/main/default/objects/Installation__c/fields/Last_Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Change_Date__c</fullName>
    <description>the last date that status was changed</description>
    <inlineHelpText>the last date that status was changed</inlineHelpText>
    <label>Last Status Change Date</label>
    <type>Date</type>
</CustomField>