force-app/main/default/objects/Installation__c/fields/Legal_Contact__c.field-meta.xml
<CustomField>
    <fullName>Legal_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary legal contact for the installation</description>
    <inlineHelpText>Primary legal contact for the installation</inlineHelpText>
    <label>Legal Contact</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Installations (Legal Contact)</relationshipLabel>
    <relationshipName>Installations</relationshipName>
    <type>Lookup</type>
</CustomField>