force-app/main/default/objects/Installation__c/fields/Mobile_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile Vendor</label>
    <type>Checkbox</type>
</CustomField>