force-app/main/default/objects/Installation__c/fields/of_devices__c.field-meta.xml
<CustomField>
    <fullName>of_devices__c</fullName>
    <description>quantity of devices being installed</description>
    <label># of devices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>