force-app/main/default/objects/Installation__c/fields/Parent_Install__c.field-meta.xml
<CustomField>
    <fullName>Parent_Install__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Install</label>
    <referenceTo>Installation__c</referenceTo>
    <relationshipLabel>Child Installations</relationshipLabel>
    <relationshipName>Installations</relationshipName>
    <type>Lookup</type>
</CustomField>