force-app/main/default/objects/Installation__c/fields/Primary_Company_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Primary_Company_Administrator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Key customer contact who has complete oversight of all of the locations using the RetinaVue Network solution. Company Administrator will complete initial setup of the clinic locations and clinic admins.</description>
    <inlineHelpText>Key customer contact who has complete oversight of all of the locations using the RetinaVue Network solution.Company Administrator will complete initial setup of the clinic locations and clinic admins.</inlineHelpText>
    <label>Primary Company Administrator</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Installations (Primary Company Administrator)</relationshipLabel>
    <relationshipName>Installations1</relationshipName>
    <type>Lookup</type>
</CustomField>