force-app/main/default/objects/Installation__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CR00029883 (Requested by Maria Polsinelli)</description>
    <inlineHelpText>Enter assigned PM to the Installation</inlineHelpText>
    <label>Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Installations3</relationshipName>
    <type>Lookup</type>
</CustomField>