force-app/main/default/objects/Installation__c/fields/Reactivated__c.field-meta.xml
<CustomField>
    <fullName>Reactivated__c</fullName>
    <formula>IF(ISBLANK( Reactivation_Date__c),false,true)</formula>
    <label>Reactivated?</label>
    <type>Checkbox</type>
</CustomField>