force-app/main/default/objects/Installation__c/fields/Reactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Reactivation_Date__c</fullName>
    <description>Date that this install went from &quot;Follow up Complete&quot; or &quot;Stalled&quot; back to an active status.</description>
    <inlineHelpText>Date that this install went from &quot;Follow up Complete&quot; or &quot;Stalled&quot; back to an active status.</inlineHelpText>
    <label>Reactivation Date</label>
    <type>Date</type>
</CustomField>