force-app/main/default/objects/Installation__c/fields/Refresher_Training__c.field-meta.xml
<CustomField>
    <fullName>Refresher_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CR00029883 (Requested by Maria Polsinelli)</description>
    <inlineHelpText>Tracks the number of refresh trainings during a week or month.</inlineHelpText>
    <label>Refresher Training</label>
    <type>Checkbox</type>
</CustomField>