force-app/main/default/objects/Installation__c/fields/Sales_Rep_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Manager__c</fullName>
    <formula>Sales_Rep__r.Manager.Full_Name__c</formula>
    <label>Sales Rep Manager</label>
    <type>Text</type>
</CustomField>