force-app/main/default/objects/Installation__c/fields/Sales_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Name__c</fullName>
    <formula>Opportunity__r.Owner_Name__c</formula>
    <label>Sales Rep Name</label>
    <type>Text</type>
</CustomField>