force-app/main/default/objects/Installation__c/fields/Security_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Security_Completion_Date__c</fullName>
    <label>Security Completion Date:</label>
    <type>Date</type>
</CustomField>