force-app/main/default/objects/Installation__c/fields/Security_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Security_Start_Date__c</fullName>
    <label>Security Start Date:</label>
    <type>Date</type>
</CustomField>