force-app/main/default/objects/Installation__c/fields/SOFA_sent_date__c.field-meta.xml
<CustomField>
    <fullName>SOFA_sent_date__c</fullName>
    <description>Date that the Subscription Order Form Agreement was sent.</description>
    <inlineHelpText>Date that the Subscription Order Form Agreement was sent.</inlineHelpText>
    <label>SOFA sent date</label>
    <type>Date</type>
</CustomField>