force-app/main/default/objects/Installation__c/fields/Solutions_Architect__c.field-meta.xml
<CustomField>
    <fullName>Solutions_Architect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solutions Architect</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Installations</relationshipName>
    <type>Lookup</type>
</CustomField>