force-app/main/default/objects/Installation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stalled</fullName>
            </value>
            <value>
                <fullName>Contract Initiation</fullName>
                <default>true</default>
                <label>Contract Initiation</label>
            </value>
            <value>
                <fullName>Contract Negotiation</fullName>
            </value>
            <value>
                <fullName>Account Setup</fullName>
            </value>
            <value>
                <fullName>Installation pending</fullName>
            </value>
            <value>
                <fullName>Installation scheduled</fullName>
            </value>
            <value>
                <fullName>Follow up complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>