force-app/main/default/objects/Installation__c/fields/Training_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_Date__c</fullName>
    <description>Date of installation / training</description>
    <inlineHelpText>Date of installation / training</inlineHelpText>
    <label>Training Date</label>
    <type>Date</type>
</CustomField>