force-app/main/default/objects/Installation__c/fields/TU_And_TUD__c.field-meta.xml
<CustomField>
    <fullName>TU_And_TUD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CR00029883 (Requested by Maria Polsinelli)</description>
    <inlineHelpText>Show devices that were purchased through Trade-Up Program</inlineHelpText>
    <label>TU And TUD</label>
    <type>Checkbox</type>
</CustomField>