force-app/main/default/objects/Installation__c/fields/Type_of_Device__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Device__c</fullName>
    <label>Type of Device</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RV100-B</fullName>
            </value>
            <value>
                <fullName>RV100-B PRO</fullName>
            </value>
            <value>
                <fullName>RV700-B</fullName>
            </value>
            <value>
                <fullName>RV700-B PRO</fullName>
            </value>
            <value>
                <fullName>TopCon</fullName>
            </value>
            <value>
                <fullName>CenterVue DRS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>