force-app/main/default/objects/Installation__c/fields/Workflow__c.field-meta.xml
<CustomField>
    <fullName>Workflow__c</fullName>
    <label>Workflow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USB connected to EMR</fullName>
            </value>
            <value>
                <fullName>USB unconnected to EMR</fullName>
            </value>
            <value>
                <fullName>Wireless connected to EMR</fullName>
            </value>
            <value>
                <fullName>Wireless unconnected to EMR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>