force-app/main/default/objects/Installation__c/recordTypes/Connex.recordType-meta.xml
<RecordType>
    <fullName>Connex</fullName>
    <active>true</active>
    <description>Connex installation</description>
    <label>Connex</label>
</RecordType>