force-app/main/default/objects/Installation__c/recordTypes/RetinaVue.recordType-meta.xml
<RecordType>
    <fullName>RetinaVue</fullName>
    <active>true</active>
    <description>RetinaVue Network installation, for Ambulatory installs</description>
    <label>RetinaVue</label>
</RecordType>