force-app/main/default/objects/Installation__c/validationRules/Move_to_AcctSetup_PrimaryAdmin.validationRule-meta.xml
<ValidationRule>
    <fullName>Move_to_AcctSetup_PrimaryAdmin</fullName>
    <active>true</active>
    <description>In order to move to Account Setup, Primary Admin Reqd</description>
    <errorConditionFormula>AND(
ISBLANK(   Primary_Company_Administrator__c   ),
ISCHANGED( Status__c ),
ISPICKVAL(Status__c, &quot;Installation pending&quot;),
 RecordType.Name = &quot;RetinaVue&quot;,
NOT(Device_Only_Install__c) 
)</errorConditionFormula>
    <errorDisplayField>Primary_Company_Administrator__c</errorDisplayField>
    <errorMessage>Please Populate Primary Company Administrator</errorMessage>
</ValidationRule>