force-app/main/default/objects/Installation__c/validationRules/Move_to_AcctSetup_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Move_to_AcctSetup_Validation</fullName>
    <active>true</active>
    <description>In order to move to Account Setup, all of these fields are required.</description>
    <errorConditionFormula>AND(
ISBLANK( Contract_Execution_Date__c ),
ISCHANGED( Status__c ),
ISPICKVAL(Status__c, &quot;Account Setup&quot;),
 RecordType.Name = &quot;RetinaVue&quot;,
NOT(Device_Only_Install__c) 
)</errorConditionFormula>
    <errorDisplayField>Contract_Execution_Date__c</errorDisplayField>
    <errorMessage>Please Populate Contract Execution Date</errorMessage>
</ValidationRule>