force-app/main/default/objects/Installation__c/validationRules/Move_to_Negotiation_Legal_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Move_to_Negotiation_Legal_Contact</fullName>
    <active>true</active>
    <description>In order to move to negotiation, legal contact is required</description>
    <errorConditionFormula>AND(
ISBLANK(  Legal_Contact__c ),
ISCHANGED( Status__c ),
ISPICKVAL(Status__c, &quot;Contract Negotiation&quot;),
 RecordType.Name = &quot;RetinaVue&quot;,
NOT(Device_Only_Install__c) 
)</errorConditionFormula>
    <errorDisplayField>Legal_Contact__c</errorDisplayField>
    <errorMessage>Legal Contact is required at this stage.</errorMessage>
</ValidationRule>