force-app/main/default/objects/Installation__c/validationRules/Move_to_Negotiation_SOFA_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Move_to_Negotiation_SOFA_Required</fullName>
    <active>true</active>
    <description>In order to move to negotiation, SOFA is required.</description>
    <errorConditionFormula>AND(
ISBLANK( SOFA_sent_date__c ),
ISCHANGED( Status__c ),
ISPICKVAL(Status__c, &quot;Account setup&quot;),
RecordType.Name = &quot;RetinaVue&quot;,
NOT(Device_Only_Install__c) 
)</errorConditionFormula>
    <errorDisplayField>SOFA_sent_date__c</errorDisplayField>
    <errorMessage>Please fill in the SOFA Sent Date field.</errorMessage>
</ValidationRule>