force-app/main/default/objects/Installation__c/listViews/Installations_by_PL.listView-meta.xml
<ListView>
    <fullName>Installations_by_PL</fullName>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>NAME</columns>
    <columns>of_devices__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>berkeym1</value>
    </filters>
    <label>Installations by PL - Mariah Berkey</label>
    <sharedTo>
        <role>JDE_50017325</role>
        <role>JDE_50018695</role>
    </sharedTo>
</ListView>